add last updates
